--- a/angular.json
+++ b/angular.json
@@ -128,9 +128,7 @@
         "deploy": {
           "builder": "angular-cli-ghpages:deploy",
           "options": {
-            "repo": "git@github.com:ZeframLou/88mph-app.git",
-            "branch": "master",
-            "baseHref": "https://zeframlou.github.io/88mph-app/"
+            "branch": "master"
           }
         }
       }
