--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-devkit/architect": "^0.900.7",
     "@angular/animations": "~9.0.0",
     "@angular/common": "~9.0.0",
     "@angular/compiler": "~9.0.0",
@@ -20,19 +21,19 @@
     "@angular/platform-browser-dynamic": "~9.0.0",
     "@angular/router": "~9.0.0",
     "apollo-angular": "^1.8.0",
+    "apollo-angular-link-http": "^1.9.0",
+    "apollo-cache-inmemory": "^1.6.0",
+    "apollo-client": "^2.6.0",
+    "apollo-link": "^1.2.11",
     "bignumber.js": "^9.0.0",
     "bnc-notify": "^1.1.0",
     "bnc-onboard": "^1.4.0",
+    "graphql": "^14.5.0",
+    "graphql-tag": "^2.10.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "web3": "^1.2.6",
-    "zone.js": "~0.10.2",
-    "apollo-angular-link-http": "^1.9.0",
-    "apollo-link": "^1.2.11",
-    "apollo-client": "^2.6.0",
-    "apollo-cache-inmemory": "^1.6.0",
-    "graphql-tag": "^2.10.0",
-    "graphql": "^14.5.0"
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.900.1",
